# jogo-program

./: .gitignore  Anchor.toml  README.md  deployment.json  package.json  tsconfig.json
app/: create_crash_bet.ts  deployment.ts  deposit.ts  deposit_and_withdraw.ts  init_admin.ts  init_crash_bet.ts  init_crash_game.ts  init_exchange.ts  init_randomness.ts  init_vault.ts  lock_crash.ts  lock_crash_game.ts  new_crash_game.ts  request_randomness.ts  settle_crash.ts  settle_crash_game.ts  utils.ts
app/admin/: assign_operator.ts  init_admin.ts
app/crash/: create_bet.ts  init_game.ts  lock_game.ts  request_random.ts  settle_bet.ts  utils.ts
app/exchange/: init_exchange.ts  mint_chip.ts  swap_in.ts  swap_out.ts
app/game/: bet.ts  deposit.ts  init_club.ts  init_game.ts  settle.ts  withdraw.ts
app/sol_vault/: close_credential.ts  deposit_or_withdraw.ts  get_amount.ts  init_global.ts
app/sports/: bet.ts  cancel_bet.ts  close_bet.ts  close_club.ts  close_game.ts  deposit.ts  init_club.ts  settle.ts  start_game.ts
app/vault/: deposit.ts  info.ts  init_vault.ts  withdraw.ts
programs/game-program/: Cargo.toml
programs/game-program/src/: error.rs  lib.rs
programs/game-program/src/instructions/: admin.rs  game.rs
programs/game-program/src/state/: admin.rs  game.rs  mod.rs  player.rs
programs/jogo-program/: Cargo.toml
programs/jogo-program/src/: error.rs  lib.rs  xnft.rs
programs/jogo-program/src/instructions/: admin.rs  crash.rs  exchange.rs  mod.rs  third_party.rs  vault.rs  xnft.rs
programs/jogo-program/src/math/: ed25519.rs  fraction.rs  mod.rs
programs/jogo-program/src/state/: admin.rs  crash.rs  exchange.rs  mod.rs  third_party.rs  vault.rs  xnft.rs
programs/sports-program/: Cargo.toml
programs/sports-program/src/: error.rs  lib.rs
programs/sports-program/src/instructions/: admin.rs  game.rs  mod.rs
programs/sports-program/src/state/: admin.rs  game.rs  mod.rs
programs/vault-program/: Cargo.toml
programs/vault-program/src/: lib.rs
programs/xnft-helper/: Cargo.toml
programs/xnft-helper/src/: instructions.rs  lib.rs  xnft.rs
tests/: jogo-program.ts
