[package]
name = "jogo-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jogo_program"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["derive", "init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["associated_token", "mint", "token"] }
solana-program = "1.18.3"
orao-solana-vrf = { version = "0.2.5", features = ["cpi"] }
bytemuck = { version = "1.14.3", features = ["derive"] }

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint", "anchor-lang/event-cpi"]
debug = ["anchor-lang/anchor-debug"]
default = ["cpi"]
