[package]
name = "jogo-program"
version = "0.1.0"
description = "Jogo core program created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jogo_program"

[dependencies]
anchor-lang = { version = "0.29.0", default-features = false, features = ["derive", "init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.18.3"
orao-solana-vrf = { version = "0.2.5", default-features = false, features = ["cpi"] }
bytemuck = { version = "1.14.3", default-features = false, features = ["derive"] }

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint", "anchor-lang/event-cpi"]
debug = ["anchor-lang/anchor-debug"]
default = []
